--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -36,3 +36,39 @@ a,
     padding: 0 2rem;
   } */
 }
+
+@layer components {
+  .main_div {
+    @apply bg-rose-300
+  }
+}
+
+
+@layer components {
+  .x_div_test {
+    @apply bg-black x
+  }
+
+  ._grow_div_container {
+    @apply container max-w-full flex px-10 py-10 md:flex-row flex-col items-center
+  }
+
+  ._grow_div {
+    @apply lg:flex-grow md:w-2/3 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center
+
+  }
+  ._grow_img {
+    @apply lg:flex-grow md:w-1/3 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center
+
+  }
+
+  ._router_links {
+    @apply flex items-center text-white px-8 hover:text-green-400 rounded-md 
+  }
+
+  .button {
+    
+  }
+}
+
+
