add: website content

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -54,11 +54,11 @@ a,
   }
 
   ._grow_div {
-    @apply lg:flex-grow md:w-2/3 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center
+    @apply lg:flex-grow md:w-1/2 lg:pr-24 md:px-8 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center
 
   }
   ._grow_img {
-    @apply lg:flex-grow md:w-1/3 lg:pr-24 md:pr-16 flex flex-col md:items-start md:text-left mb-16 md:mb-0 items-center text-center
+    @apply lg:flex-grow md:w-1/2 lg:pr-24 md:pr-16 flex flex-col md:items-start mb-16 md:mb-0 items-center text-center
 
   }
 
